# CodeChamber

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  run.py  teste.py
.github/workflows/: python-package.yml
application/src/: __main__.py
application/src/api/: upload_file.py
application/src/database/: configure_post.py
application/src/database/users/: configure_accont.py  configure_users.py
application/src/models/: link_validators.py  modelsUser.py  recommendations.py  search.py
application/src/routes/: configuracao.py  denucia.py  get_search.py  home.py  loginAccount.py  logoutAccont.py  page_erro.py  page_post.py  perfil.py  register.py  username.py
application/src/services/: api_noticias.py  api_service.py  perfil.py  user_service.py
application/src/templates/: home.html
tests/unit/models/: test_link_validators.py
